--- a/introduction_page/style.css
+++ b/introduction_page/style.css
@@ -47,7 +47,7 @@ p {
 /* Figure Styling */
 figure {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin: 30px 0;
 }
