--- a/algorithm/user.css
+++ b/algorithm/user.css
@@ -26,19 +26,7 @@ h2.main-heading {
 }
 
 h3.subheading {
-    font-size: 1.75em;
-    color: #34495e;
-    margin-bottom: 10px;
-}
-
-h4.subheading {
-    font-size: 1.75em;
-    color: #34495e;
-    margin-bottom: 10px;
-}
-
-h5.subheading {
-    font-size: 1.75em;
+    font-size: 1.75em; /* Consistent font size for all subheadings */
     color: #34495e;
     margin-bottom: 10px;
 }
