--- a/algorithm/linknum.css
+++ b/algorithm/linknum.css
@@ -45,7 +45,7 @@ pre {
 .images figure {
     margin: 10px;
     text-align: center;
-    max-width: 300px; /* Ensure the images don't go out of bounds */
+    max-width: 400px; /* Increased max-width to enlarge images */
 }
 
 .images img {
